--- a/src/main/resources/static/index.css
+++ b/src/main/resources/static/index.css
@@ -1,5 +1,5 @@
-div{
-    background-color: lightblue;
+#menu{
+    background-color: #1ECBE1;
     border-radius: 25px;
     border: 2px solid black;
     padding: 10px;
@@ -8,3 +8,20 @@ div{
     margin: auto;
 }
 
+.links{
+    color: #fff;
+    font-size: 14px;
+    font-weight: bold;
+    text-align: center;
+    font-family: Canva Sans,Noto Sans Variable,Noto Sans,-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif;
+    background-color: #4BD5E7;
+    border: 1px solid black;
+    padding: 10px;
+    width: 100px;
+    height: 20px;
+
+}
+
+.login{
+    font-size: 10px;
+}
