--- a/src/main/resources/static/invoice.css
+++ b/src/main/resources/static/invoice.css
@@ -11,3 +11,15 @@ table, th, td {
 #invoiceDiv{
     padding: 20px;
 }
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
